# llama.cl

./: .gitignore  .gitmodules  README.md  build_windows.bat  init.sh  llama.py  requirements.txt  setup.py  sys.txt
chatllama/: __main__.py  main.py  opset.py
doc/: fc-perf.md  graph.md
ext/: intrinsic_helpers.hpp  ktensor.hpp  llama_ext.cpp  setup.py  test.py
ops/: CMakeLists.txt  main.cpp  op_attn.hpp  op_embedding.hpp  op_fc.hpp  op_misc.hpp  op_onednn.hpp  perf_ops.py  profiler.cpp  profiler.hpp  tensor.hpp  test.py  test_ops.py  utils.hpp
tests/: main.py
wikitext-2/: simple
